# Duck-Central

./: .gitignore  CMakeLists.txt  README.md  aquila01_ground_data.txt  duck.c  duck_ap_gps_lora_demo_1.cpp  duck_chip_info_and_scan_exp.cpp  duck_simple_gps_test.cpp  duck_simple_web_server_exp.cpp  gps.c  gps.h  landing  minmea.c  minmea.h  phoenix1_sunday.txt  plug  popdata
gps/: gps.c  gps.h
include/: board_config.h  log.h
lora/: lora.c  lora.h  lora_interface.h
quacker_board/: batt_pwr_and_temp_sensor.c  pwr_controller.cpp  pwr_controller.h
space_helmet/LSM9DS1/: LSM9DS1.cpp  LSM9DS1.h
space_helmet/bmp388/: pico_bmp388.cpp  pico_bmp388.h
space_helmet/sd_card/: File.cpp
src/: CMakeLists.txt
src/bmp388/: CMakeLists.txt  bmp_388.cpp  bmp_388.h
src/bmp388/driver/: CMakeLists.txt  bmp3.c  bmp3_defs.h  bmp3_selftest.c
src/bmp388/test/: CMakeLists.txt  bmp388_test.cpp
src/bmx160/: CMakeLists.txt  bmx160.cpp  bmx_160.cpp  bmx_160.h
src/bmx160/test/: CMakeLists.txt  pop_test.cpp  simple_test.cpp
src/board_control/: CMakeLists.txt  batt_pwr_and_temp_sensor.c  batt_pwr_and_temp_sensor.h  power_control.cpp  power_control.h  power_controller.cpp  power_controller.h
src/gps/: CMakeLists.txt  gps.c  gps.cpp  gps.h  minmea.c  minmea.h
src/gps/test/: CMakeLists.txt  duck_gps_DMA_test.cpp  test_gps.cpp
src/lora/: CMakeLists.txt  lora.c  lora.cpp  lora.h  lora_interface.h
src/lora/test/: CMakeLists.txt  duck_lora_receiver.cpp  duck_lora_repeater.cpp  duck_lora_transmitter.cpp
src/satellite/: CMakeLists.txt  IridiumSBD.cpp  IridiumSBD.h
src/satellite/test/: CMakeLists.txt  basic_send.cpp
src/sd_logger/: CMakeLists.txt  sd_def.h  sd_logger.cpp  sd_logger.h
src/space_helmet/: CMakeLists.txt  sd_card.cpp  sd_card.h  sd_def.h  sd_logger.cpp  sd_logger.h
src/space_helmet/test/: CMakeLists.txt  sd_card_test.cpp
src/winc1500/: Ard_to_Pico.c  IPAddress.cpp  IPAddress.h  WiFi101.h  WiFiClient.h  WiFiMDNSResponder.cpp  WiFiSSLClient.cpp  WiFiSSLClient.h  WiFiServer.h  WiFiUdp.cpp
src/winc1500/bsp/include/: nm_bsp.h  nm_bsp_rp2040.h
src/winc1500/test/: duck_simple_web_server_exp.cpp.orig
src/winc1500/utility/: WiFiSocket.cpp  WiFiSocket.h
test/: duck_adc_temp_and_bat_sense.cpp  duck_ap_gps_lora_demo_1.cpp  duck_board_3_test.cpp  duck_gps_dma.cpp  duck_lora_message_logger.cpp  duck_lora_repeater.c  duck_lsm9ds1_example.cpp  duck_range_test.c  duck_simple_web_server_exp.cpp  duck_space_hat_i2c_check.cpp  index.h
tst/: CMakeLIsts.txt  CMakeLists.txt  duck_adc_temp_and_bat_sense.cpp  duck_lora_message_logger.cpp  duck_range_test.c  index.h  spaceducks_ii.cpp  test_blink.c  test_range.c  test_range.cpp
wifi_and_misc_examples/: duck_ap_simple_web_server_exp.cpp
winc1500/: Ard_to_Pico.h  WiFi.cpp  WiFiClient.cpp  WiFiMDNSResponder.h  WiFiUdp.h
winc1500/bsp/include/: nm_bsp.h  nm_bsp_internal.h  nm_bsp_rp2040.h
winc1500/bsp/source/: nm_bsp_rp2040.c
winc1500/bus_wrapper/include/: nm_bus_wrapper.h
winc1500/bus_wrapper/source/: nm_bus_wrapper_rp2040.c
winc1500/driver/include/: m2m_wifi.h
winc1500/driver/source/: m2m_hif.c  m2m_wifi.c
winc1500/socket/include/: socket.h
