# GPS driver code
add_subdirectory(gps)

# LoRa driver code
add_subdirectory(lora)

# WiFi driver code
add_subdirectory(winc1500)

# Board control library for low level telemetry and control functions
add_subdirectory(board_control)

# RockBlock code
add_subdirectory(satellite)

# BMP388 driver code
add_subdirectory(bmp388)