# GPS driver code
add_subdirectory(gps)

# LoRa driver code
add_subdirectory(lora)

# WiFi driver code
add_subdirectory(winc1500)

add_subdirectory(space_helmet)

# Board control library for low level telemetry and control functions
add_subdirectory(board_control)

# BMP388
add_subdirectory(bmp388)

# RockBlock code
add_subdirectory(satellite)
